Unit tests for LinkedTypeGraphMap